// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getArrowStyles Get a correct arrow hover styles with background, shadow and border custom colors 1`] = `
Object {
  " .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(0px 0px 0px rgba(var(--maxi-light-color-2), 0.2))",
      },
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-5), 1)",
      },
      "label": "Arrow Color",
    },
  },
  " .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-5), 1)",
      },
      "label": "Arrow Color",
    },
  },
  ":hover .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(1px 2px 1px rgba(61,133,209))",
      },
    },
  },
  ":hover .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1), 1)",
      },
      "label": "Arrow Color",
    },
  },
  ":hover .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1), 1)",
      },
      "label": "Arrow Color",
    },
  },
}
`;

exports[`getArrowStyles Get a correct arrow styles 1`] = `
Object {
  " .maxi-container-arrow": Object {
    "shadow": Object {},
  },
  " .maxi-container-arrow .maxi-container-arrow--content": Object {
    "arrow": Object {
      "general": Object {
        "display": "block",
        "height": "2px",
        "left": "1%",
        "top": "-1.4142135623730951px",
        "width": "2px",
      },
      "l": Object {
        "display": "block",
        "height": "1px",
        "left": "4%",
        "top": "-0.7071067811865476px",
        "width": "1px",
      },
      "m": Object {
        "display": "block",
        "height": "3px",
        "left": "2%",
        "top": "calc(100% + 3px)",
        "width": "3px",
      },
      "s": Object {
        "display": "block",
        "height": "1px",
        "left": "4%",
        "top": "calc(100% + 1px)",
        "width": "1px",
      },
      "xl": Object {
        "display": "block",
        "height": "3px",
        "left": "2%",
        "top": "-2.121320343559643px",
        "width": "3px",
      },
      "xs": Object {
        "display": "block",
        "height": "3px",
        "left": "2%",
        "top": "calc(100% + 3px)",
        "width": "3px",
      },
      "xxl": Object {
        "display": "block",
        "height": "1px",
        "left": "4%",
        "top": "-0.7071067811865476px",
        "width": "1px",
      },
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgb(255, 99, 71)",
      },
      "label": "Arrow Color",
    },
  },
  " .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgb(255, 99, 71)",
      },
      "label": "Arrow Color",
    },
  },
}
`;

exports[`getArrowStyles Get a correct palette colors arrow hover styles 1`] = `
Object {
  " .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(0px 0px 0px rgba(var(--maxi-light-color-2), 0.2))",
      },
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-5), 1)",
      },
      "label": "Arrow Color",
    },
  },
  " .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-5), 1)",
      },
      "label": "Arrow Color",
    },
  },
  ":hover .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(1px 2px 1px rgba(var(--maxi-light-color-4), 0.2))",
      },
    },
  },
  ":hover .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1), 1)",
      },
      "label": "Arrow Color",
    },
  },
  ":hover .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1), 1)",
      },
      "label": "Arrow Color",
    },
  },
}
`;

exports[`getArrowStyles Return empty arrow styles when arrow status is off 1`] = `Object {}`;

exports[`getArrowStyles Return empty arrow styles when background color is not selected 1`] = `Object {}`;

exports[`getArrowStyles Return empty arrow styles when background color is selected and border is active but some style on hover is not solid 1`] = `Object {}`;

exports[`getArrowStyles Return empty arrow styles when background color is selected and border is active but the style is not solid 1`] = `Object {}`;
